// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should render with intial search query 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SearchField)
    pageId="1234"
    query="foo"
  >
    <SearchField
      fetchSuggestions={[Function]}
      name="search"
      pageId="1234"
      query="foo"
      submitSearch={[Function]}
    >
      <div
        data-test-id="SearchField"
      >
        <div
          className="css-1jyozbi"
        >
          <div
            className="css-1utu657"
          >
            <form
              action="."
              onSubmit={[Function]}
            >
              <label
                className="css-y5wpat"
                htmlFor="search"
              >
                <div
                  className="css-tzdtea"
                >
                  <Magnifier>
                    <Icon
                      className=""
                      color={null}
                      content="<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>"
                      size="inherit"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        className="css-yys9hb "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>",
                          }
                        }
                        style={
                          Object {
                            "fill": null,
                            "fontSize": "inherit",
                          }
                        }
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </Icon>
                  </Magnifier>
                </div>
              </label>
              <Component
                autoComplete={false}
                className="css-1yoassp"
                onChange={[Function]}
                onFocusChange={[Function]}
                onSubmit={[Function]}
                setRef={[Function]}
                type="search"
                value="foo"
              >
                <SimpleInput
                  autoComplete={false}
                  autoCorrect={false}
                  className="css-1yoassp"
                  disabled={false}
                  id={null}
                  isControlled={false}
                  name={null}
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onSubmit={[Function]}
                  onValidate={[Function]}
                  password={false}
                  setRef={[Function]}
                  type="search"
                  validateOnBlur={true}
                  value="foo"
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="css-1yoassp"
                    disabled={false}
                    id={null}
                    name={null}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="search"
                    value="foo"
                  />
                </SimpleInput>
              </Component>
            </form>
          </div>
          <div>
            <button
              className="css-1yb14a7 css-gyrv08"
              onClick={[Function]}
            >
              <Translate
                className=""
                params={Object {}}
                string="search.cancel"
              >
                <span
                  className=""
                />
              </Translate>
            </button>
          </div>
        </div>
      </div>
    </SearchField>
  </Connect(SearchField)>
</Provider>
`;

exports[`<Content /> should show suggestions when focused 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(SearchField)
    pageId="1234"
    query="foo"
  >
    <SearchField
      fetchSuggestions={[Function]}
      name="search"
      pageId="1234"
      query="foo"
      submitSearch={[Function]}
    >
      <div
        data-test-id="SearchField"
      >
        <div
          className="css-1jyozbi"
        >
          <div
            className="css-1utu657"
          >
            <form
              action="."
              onSubmit={[Function]}
            >
              <label
                className="css-y5wpat"
                htmlFor="search"
              >
                <div
                  className="css-tzdtea"
                >
                  <Magnifier>
                    <Icon
                      className=""
                      color={null}
                      content="<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>"
                      size="inherit"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        className="css-yys9hb "
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>",
                          }
                        }
                        style={
                          Object {
                            "fill": null,
                            "fontSize": "inherit",
                          }
                        }
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </Icon>
                  </Magnifier>
                </div>
              </label>
              <Component
                autoComplete={false}
                className="css-1yoassp"
                onChange={[Function]}
                onFocusChange={[Function]}
                onSubmit={[Function]}
                setRef={[Function]}
                type="search"
                value="foo"
              >
                <SimpleInput
                  autoComplete={false}
                  autoCorrect={false}
                  className="css-1yoassp"
                  disabled={false}
                  id={null}
                  isControlled={false}
                  name={null}
                  onChange={[Function]}
                  onFocusChange={[Function]}
                  onSanitize={[Function]}
                  onSubmit={[Function]}
                  onValidate={[Function]}
                  password={false}
                  setRef={[Function]}
                  type="search"
                  validateOnBlur={true}
                  value="foo"
                >
                  <input
                    autoComplete="off"
                    autoCorrect="off"
                    className="css-1yoassp"
                    disabled={false}
                    id={null}
                    name={null}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="search"
                    value="foo"
                  />
                </SimpleInput>
              </Component>
            </form>
          </div>
          <div>
            <button
              className="css-1yb14a7"
              onClick={[Function]}
            >
              <Translate
                className=""
                params={Object {}}
                string="search.cancel"
              >
                <span
                  className=""
                />
              </Translate>
            </button>
          </div>
        </div>
        <div
          className="css-1su8uh1"
        />
        <Connect(SuggestionList)
          bottomHeight={0}
          onClick={[Function]}
          searchPhrase="foo"
        />
      </div>
    </SearchField>
  </Connect(SearchField)>
</Provider>
`;
